--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>rereSada</title>
-   
+    <link href="img/favicon.ico" rel="icon">
 
 <!--estilo css-->
     <link rel="stylesheet" href="css/style.css">
