--- a/index.html
+++ b/index.html
@@ -832,6 +832,29 @@
 
             </main>
 
+
+            <footer id="footer">
+              <div class="container">
+                <div class="copyright">
+                  &copy; Todos os direitos reservados
+                  <strong>
+                    <span>Reresada</span>
+                  </strong>
+                </div>
+                <div class="credits">
+                  Desenvolvido por:
+                  <a href="https://rerefer18.github.io/luanascente/" target="_blank"> Luana Da Silva Fernandes</a>
+                </div>
+              </div>
+
+
+
+
+
+
+            </footer>
+
+
         <a href="#" class="back-to-top d-flex align-items-center justify-content-center">
         <i class="bi bi-arrow-up-short"> </i>
 
